--- a/src/components/ContactPainel/ContactPainel.scss
+++ b/src/components/ContactPainel/ContactPainel.scss
@@ -2,6 +2,7 @@
     width: 100%;
     height: 100vh;
     max-width: 430px;
+    position: relative;
     background: #111b21;
     border-right: 1px solid #222d34;
 
@@ -17,7 +18,7 @@
         background: #202c33;
 
         .user-options {
-            width: 130px;
+            width: 170px;
             display: flex;
             align-items: center;
             justify-content: space-between;
@@ -29,6 +30,7 @@
         }
 
         img {
+            cursor: pointer;
             height: 40px;
             width: 40px;
             border-radius: 100%;
@@ -39,52 +41,10 @@
         display: flex;
         align-items: center;
         padding: 7px 0.8rem;
-
-        svg {
-            margin-left: 8px;
-        }
     }
 
-    .search-contact {
-        width: 100%;
-        height: 35px;
-        display: flex;
-        background: #202c33;
-        border-radius: 8px;
-
-        button {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100%;
-            outline: none;
-            border: none;
-            background: transparent;
-        }
-
-        .search-container {
-            width: 100%;
-            height: 100%;
-            margin: 0 5px 4px -15px;
-        }
-
-        input {
-            width: 100%;
-            outline: none;
-            color: white;
-            background: transparent;
-            border: none;
-
-            &::placeholder {
-                font-size: 0.9rem;
-                line-height: 22px;
-                color: #8696a0;
-            }
-        }
-
-        input:focus::-webkit-input-placeholder {
-            color: transparent;
-        }
+    .search-svg {
+        margin-left: 8px;
     }
 
     .contact-deck {
@@ -133,42 +93,8 @@
         color: #00a884;
     }
 
-    .on-click-animation {
-        transform: rotate(180deg);
-        animation: rotation-change 0.3s;
+    .filter-ml {
+        margin-left: 8px;
     }
 
-    @keyframes rotation-change {
-        0% {
-            opacity: 0.3;
-            transform: rotate(0deg);
-        }
-        50% {
-            opacity: 0.5;
-            transform: rotate(90deg);
-        }
-        100% {
-            opacity: 1;
-            transform: rotate(180deg);
-        }
-    }
-
-    .off-click-animation {
-        animation: off-rotation-change 0.3s;
-    }
-
-    @keyframes off-rotation-change {
-        0% {
-            opacity: 0.3;
-            transform: rotate(180deg);
-        }
-        50% {
-            opacity: 0.5;
-            transform: rotate(90deg);
-        }
-        100% {
-            opacity: 1;
-            transform: rotate(0deg);
-        }
-    }
 }
