--- a/src/components/FullScreenModal/FullScreenModal.scss
+++ b/src/components/FullScreenModal/FullScreenModal.scss
@@ -3,6 +3,7 @@
     z-index: 995;
     position: absolute;
     width: 100vw;
+    max-width: 1702px;
     border: none;
     background: #202c33;
 
